tests/good/example-03.rat
fn Main () -> Void {
  let a = 5;
  let mut b = a;
  b = b + 2;
  b = a;
  return;
}