tests/bad/example-e14.rat
fn Main () -> Void {
  let a = True < 5;
  return;
}